reformat and optimize imports
git-svn-id: https://svn.apache.org/repos/asf/ibatis/trunk@736963 13f79535-47bb-0310-9956-ffa450edef68